Feat: updated readme